--- a/sass/layouts/_problems.scss
+++ b/sass/layouts/_problems.scss
@@ -209,21 +209,50 @@
 
 .balloon-negative {
     padding: 68px 28px;
-    background-image: url("/images/index/png/balloon-negative_mac.png");
+    background-image: url("/images/index/png/balloon-negative_mob.png");
+
+    @media (min-device-pixel-ratio: 2) and (min-width: 390px),
+    (-webkit-min-device-pixel-ratio: 2) and (min-width: 390px),
+    (min-resolution: 192dpi) and (min-width: 390px),
+    (min-resolution: 2dppx) and (min-width: 390px) {
+        background-image: url("/images/index/png/balloon-negative_mob@2x.png");
+    }
 
     @media screen and (min-width: 834px) {
         padding: 66px 44px;
         transform: none;
+        background-image: url("/images/index/png/balloon-negative_tab.png");
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 834px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 834px),
+        (min-resolution: 192dpi) and (min-width: 834px),
+        (min-resolution: 2dppx) and (min-width: 834px) {
+            background-image: url("/images/index/png/balloon-negative_tab@2x.png");
+        }
     }
 
     @media screen and (min-width: 1440px) {
-        // padding: 120px 68px 0px 68px;
         padding: 120px 68px;
+        background-image: url("/images/index/png/balloon-negative_desk.png");
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 1440px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 1440px),
+        (min-resolution: 192dpi) and (min-width: 1440px),
+        (min-resolution: 2dppx) and (min-width: 1440px) {
+            background-image: url("/images/index/png/balloon-negative_desk@2x.png");
+        }
     }
 
     @media screen and (min-width: 1728px) {
         padding: 144px 82px;
-        // padding: 144px 82px 0px 82px;
+        background-image: url("/images/index/png/balloon-negative_mac.png");
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 1728px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 1728px),
+        (min-resolution: 192dpi) and (min-width: 1728px),
+        (min-resolution: 2dppx) and (min-width: 1728px) {
+            background-image: url("/images/index/png/balloon-negative_mac@2x.png");
+        }
     }
 
     &>p {
@@ -241,18 +270,49 @@
 
 .balloon-positive {
     padding: 42px 34px;
-    background-image: url("/images/index/png/balloon-positive_mac.png");
+    background-image: url("/images/index/png/balloon-positive_mob.png");
+
+    @media (min-device-pixel-ratio: 2) and (min-width: 390px),
+    (-webkit-min-device-pixel-ratio: 2) and (min-width: 390px),
+    (min-resolution: 192dpi) and (min-width: 390px),
+    (min-resolution: 2dppx) and (min-width: 390px) {
+        background-image: url("/images/index/png/balloon-positive_mob@2x.png");
+    }
 
     @media screen and (min-width: 834px) {
         padding: 40px 40px;
         transform: none;
+        background-image: url("/images/index/png/balloon-positive_tab.png");
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 834px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 834px),
+        (min-resolution: 192dpi) and (min-width: 834px),
+        (min-resolution: 2dppx) and (min-width: 834px) {
+            background-image: url("/images/index/png/balloon-positive_tab@2x.png");
+        }
     }
 
     @media screen and (min-width: 1440px) {
         padding: 100px 32px;
+        background-image: url("/images/index/png/balloon-positive_desk.png");
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 1440px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 1440px),
+        (min-resolution: 192dpi) and (min-width: 1440px),
+        (min-resolution: 2dppx) and (min-width: 1440px) {
+            background-image: url("/images/index/png/balloon-positive_desk@2x.png");
+        }
     }
 
     @media screen and (min-width: 1728px) {
         padding: 112px 65px;
+        background-image: url("/images/index/png/balloon-positive_mac.png");
+
+        @media (min-device-pixel-ratio: 2) and (min-width: 1728px),
+        (-webkit-min-device-pixel-ratio: 2) and (min-width: 1728px),
+        (min-resolution: 192dpi) and (min-width: 1728px),
+        (min-resolution: 2dppx) and (min-width: 1728px) {
+            background-image: url("/images/index/png/balloon-positive_mac@2x.png");
+        }
     }
 }
