Production section - block

--- a/sass/base/_section-narrow.scss
+++ b/sass/base/_section-narrow.scss
@@ -2,7 +2,7 @@
 .section-narrow {
     padding: 0 auto;
     margin-top: 108px;
-    outline: 2px solid tomato;
+    // outline: 2px solid tomato;
 
     @media screen and (min-width: 390px) {
         width: 390px;
