--- a/css/main.css
+++ b/css/main.css
@@ -37,9 +37,9 @@ img {
 body {
   margin: 0;
   font-family: var(--text_color), var(--title_font);
+  font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  font-style: normal;
   line-height: 150%;
   letter-spacing: 0em;
   color: var(--title_color);
@@ -116,7 +116,6 @@ body {
 .section-narrow {
   padding: 0 auto;
   margin-top: 108px;
-  outline: 2px solid tomato;
 }
 @media screen and (min-width: 390px) {
   .section-narrow {
@@ -178,6 +177,67 @@ body {
           clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.caption {
+  margin: 0 auto;
+  padding-top: 114px;
+  width: auto;
+  height: 156px;
+  background-image: url("/images/index/png/caption-background_mob.png");
+}
+@media screen and (min-width: 390px) {
+  .caption {
+    margin-left: -28px;
+    width: 390px;
+    height: 156px;
+  }
+}
+@media screen and (min-width: 834px) {
+  .caption {
+    margin-left: -40px;
+    padding-top: 32px;
+    width: 834px;
+    height: 161px;
+    background-image: url("/images/index/png/caption-background_tab.png");
+  }
+}
+@media screen and (min-width: 1440px) {
+  .caption {
+    margin-left: -194px;
+    padding-top: 44px;
+    width: 1440px;
+    height: 269px;
+    background-image: url("/images/index/png/caption-background_desk.png");
+  }
+}
+@media screen and (min-width: 1728px) {
+  .caption {
+    margin-left: -213px;
+    padding-top: 52px;
+    width: 1728px;
+    height: 309px;
+    background-image: url("/images/index/png/caption-background_mac.png");
+  }
+}
+.caption_text {
+  font-family: var(--title_font);
+  font-weight: 400;
+  line-height: 150%;
+  font-size: 28px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: var(--title_color);
+}
+@media screen and (min-width: 1440px) {
+  .caption_text {
+    font-size: 36px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .caption_text {
+    font-size: 40px;
+  }
 }
 
 .header_section {
@@ -907,12 +967,25 @@ body {
 }
 .balloon-negative > p {
   font-weight: 400;
+  font-size: 18px;
+}
+@media screen and (min-width: 834px) {
+  .balloon-negative > p {
+    font-size: 14px;
+  }
 }
 @media screen and (min-width: 1440px) {
   .balloon-negative > p {
     font-weight: 500;
+    font-size: 16px;
   }
 }
+@media screen and (min-width: 1728px) {
+  .balloon-negative > p {
+    font-size: 20px;
+  }
+}
+
 .balloon-positive {
   padding: 42px 34px;
   background-image: url("/images/index/png/balloon-positive_mob.png");
@@ -955,4 +1028,46 @@ body {
   .balloon-positive {
     background-image: url("/images/index/png/balloon-positive_mac@2x.png");
   }
+}
+
+.products {
+  margin-top: -84px;
+}
+@media screen and (min-width: 834px) {
+  .products {
+    margin-top: 28px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .products {
+    margin-top: 88px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products {
+    margin-top: 44px;
+  }
+}
+.products__list {
+  display: flex;
+}
+.products__card {
+  position: relative;
+  width: 296px;
+  height: 364px;
+  border: 1px solid tomato;
+  background: radial-gradient(50% 50% at 0% 0%, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0) 100%), url(IMG_20190307_015054_997.jpg);
+  filter: drop-shadow(1px 1px 8px rgba(21, 16, 15, 0.5));
+  border-radius: 8px;
+}
+.products__card::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  width: 100%;
+  height: 100%;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 4px rgba(21, 16, 15, 0.5);
+  border-radius: 8px;
 }/*# sourceMappingURL=main.css.map */
