--- a/sass/layouts/_problems.scss
+++ b/sass/layouts/_problems.scss
@@ -257,14 +257,20 @@
 
     &>p {
         font-weight: 400;
+        font-size: 18px;
 
-        @media screen and (min-width: 834px) {}
+        @media screen and (min-width: 834px) {
+            font-size: 14px;
+        }
 
         @media screen and (min-width: 1440px) {
             font-weight: 500;
+            font-size: 16px;
         }
 
-        @media screen and (min-width: 1728px) {}
+        @media screen and (min-width: 1728px) {
+            font-size: 20px;
+        }
     }
 }
 
