--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ svg {
 }
 
 figure {
+  position: absolute;
   margin: 0;
 }
 
@@ -1048,26 +1049,111 @@ body {
     margin-top: 44px;
   }
 }
-.products__list {
-  display: flex;
+.products__list-item {
+  display: block;
 }
-.products__card {
-  position: relative;
+@media screen and (min-width: 834px) {
+  .products__list-item {
+    display: flex;
+  }
+}
+.products__card-image {
   width: 296px;
   height: 364px;
-  border: 1px solid tomato;
-  background: radial-gradient(50% 50% at 0% 0%, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0) 100%), url(IMG_20190307_015054_997.jpg);
   filter: drop-shadow(1px 1px 8px rgba(21, 16, 15, 0.5));
   border-radius: 8px;
 }
-.products__card::before {
-  content: "";
+@media screen and (min-width: 834px) {
+  .products__card-image {
+    width: 200px;
+    height: 280px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .products__card-image {
+    width: 296px;
+    height: 364px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__card-image {
+    width: 360px;
+    height: 440px;
+  }
+}
+.products__card {
   position: absolute;
-  top: -10px;
-  right: -10px;
-  width: 100%;
-  height: 100%;
+  width: 296px;
+  height: 364px;
   background: #FFFFFF;
   box-shadow: 0px 2px 4px rgba(21, 16, 15, 0.5);
   border-radius: 8px;
+}
+.products__cardframe--1 {
+  margin-left: 10px;
+  margin-top: -10px;
+  z-index: -1;
+}
+@media screen and (min-width: 834px) {
+  .products__cardframe--1 {
+    width: 200px;
+    height: 280px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .products__cardframe--1 {
+    width: 296px;
+    height: 364px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__cardframe--1 {
+    width: 360px;
+    height: 440px;
+  }
+}
+.products__cardframe--2 {
+  margin-left: 18px;
+  margin-top: -18px;
+  z-index: -2;
+}
+@media screen and (min-width: 834px) {
+  .products__cardframe--2 {
+    width: 200px;
+    height: 280px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .products__cardframe--2 {
+    width: 296px;
+    height: 364px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__cardframe--2 {
+    width: 360px;
+    height: 440px;
+  }
+}
+.products__card-title {
+  position: relative;
+  bottom: 72px;
+  width: 296px;
+  height: 72px;
+  margin: 0;
+  padding: 24px 21px;
+  background: linear-gradient(93.39deg, rgba(240, 243, 246, 0.7) 0%, rgba(226, 231, 235, 0) 100%);
+  box-shadow: inset 0px 1px 1px rgba(21, 16, 15, 0.4);
+  -webkit-backdrop-filter: blur(7.5px);
+          backdrop-filter: blur(7.5px);
+  border-radius: 0px 0px 8px 8px;
+  font-family: var(--title_font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  text-align: center;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }/*# sourceMappingURL=main.css.map */
