--- a/sass/layouts/_products.scss
+++ b/sass/layouts/_products.scss
@@ -17,40 +17,115 @@
         margin-top: 44px;
     }
 
-    &__list {
-        display: flex;
-    }
-
-    &__list-item {}
-
     &__block-title {}
 
-    &__card {
-        position: relative;
-        width: 296px;
-        height: 364px;
-        border: 1px solid tomato;
-        background: radial-gradient(50% 50% at 0% 0%, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0) 100%), url(IMG_20190307_015054_997.jpg);
-        filter: drop-shadow(1px 1px 8px rgba(21, 16, 15, 0.5));
-        border-radius: 8px;
+    &__list {}
 
-        &::before {
-            content: '';
-            position: absolute;
-            top: -10px;
-            right: -10px;
-            width: 100%;
-            height: 100%;
-            // width: 296px;
-            // height: 364px;
-            background: #FFFFFF;
-            box-shadow: 0px 2px 4px rgba(21, 16, 15, 0.5);
-            border-radius: 8px;
+    &__list-item {
+        display: block;
+
+        @media screen and (min-width: 834px) {
+            display: flex;
         }
     }
 
-    &__card-frame {}
 
-    &__card-title {}
+    &__card-image {
+        width: 296px;
+        height: 364px;
+        filter: drop-shadow(1px 1px 8px rgba(21, 16, 15, 0.5));
+        border-radius: 8px;
+
+        @media screen and (min-width: 390px) {}
+
+        @media screen and (min-width: 834px) {
+            width: 200px;
+            height: 280px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            width: 296px;
+            height: 364px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 360px;
+            height: 440px;
+        }
+    }
+
+    &__card {
+        position: absolute;
+        width: 296px;
+        height: 364px;
+        background: #FFFFFF;
+        box-shadow: 0px 2px 4px rgba(21, 16, 15, 0.5);
+        border-radius: 8px;
+    }
+
+    &__cardframe--1 {
+        margin-left: 10px;
+        margin-top: -10px;
+        z-index: -1;
+
+        @media screen and (min-width: 834px) {
+            width: 200px;
+            height: 280px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            width: 296px;
+            height: 364px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 360px;
+            height: 440px;
+        }
+    }
+
+    &__cardframe--2 {
+        margin-left: 18px;
+        margin-top: -18px;
+        z-index: -2;
+
+        @media screen and (min-width: 834px) {
+            width: 200px;
+            height: 280px;
+        }
+
+        @media screen and (min-width: 1440px) {
+            width: 296px;
+            height: 364px;
+        }
+
+        @media screen and (min-width: 1728px) {
+            width: 360px;
+            height: 440px;
+        }
+    }
+
+    &__card-title {
+        position: relative;
+        bottom: 72px;
+        width: 296px;
+        height: 72px;
+        margin: 0;
+        padding: 24px 21px;
+        background: linear-gradient(93.39deg, rgba(240, 243, 246, 0.7) 0%, rgba(226, 231, 235, 0) 100%);
+        box-shadow: inset 0px 1px 1px rgba(21, 16, 15, 0.4);
+        backdrop-filter: blur(7.5px);
+        border-radius: 0px 0px 8px 8px;
+
+        font-family: var(--title_font);
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 150%;
+        text-align: center;
+        letter-spacing: 0.15em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
 
 }
