--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@ figure {
 img {
   display: block;
   min-width: 100%;
-  max-width: 100%;
   height: auto;
 }
 
@@ -1049,99 +1048,69 @@ body {
     margin-top: 44px;
   }
 }
-.products__list-item {
-  display: block;
+.products__list {
+  display: flex;
+}
+.products__section--1 {
+  margin-top: 64px;
+  margin-right: 100px;
+}
+.products__section--2 {
+  margin-top: 64px;
+}
+.products__block-title {
+  position: absolute;
+  margin-top: -64px;
+  margin-left: 68px;
+  font-family: var(--title_font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: var(--title_color);
+}
+.products__block-title::before {
+  content: "";
+  position: absolute;
+  left: -281px;
+  margin-top: 30px;
+  width: 716px;
+  height: 8px;
+  background: var(--lines_color);
+  border-radius: 0px 8px 8px 0px;
 }
 @media screen and (min-width: 834px) {
-  .products__list-item {
-    display: flex;
+  .products__block-title {
+    font-size: 16px;
   }
 }
-.products__card-image {
-  width: 296px;
-  height: 364px;
+@media screen and (min-width: 1440px) {
+  .products__block-title {
+    font-size: 18px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .products__block-title {
+    font-size: 24px;
+  }
+}
+.card {
+  width: 360px;
+  height: 440px;
+  overflow: hidden;
+  background: radial-gradient(rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0) 100%);
   filter: drop-shadow(1px 1px 8px rgba(21, 16, 15, 0.5));
   border-radius: 8px;
 }
-@media screen and (min-width: 834px) {
-  .products__card-image {
-    width: 200px;
-    height: 280px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .products__card-image {
-    width: 296px;
-    height: 364px;
-  }
-}
-@media screen and (min-width: 1728px) {
-  .products__card-image {
-    width: 360px;
-    height: 440px;
-  }
-}
-.products__card {
-  position: absolute;
-  width: 296px;
-  height: 364px;
-  background: #FFFFFF;
-  box-shadow: 0px 2px 4px rgba(21, 16, 15, 0.5);
-  border-radius: 8px;
-}
-.products__cardframe--1 {
-  margin-left: 10px;
-  margin-top: -10px;
-  z-index: -1;
-}
-@media screen and (min-width: 834px) {
-  .products__cardframe--1 {
-    width: 200px;
-    height: 280px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .products__cardframe--1 {
-    width: 296px;
-    height: 364px;
-  }
-}
-@media screen and (min-width: 1728px) {
-  .products__cardframe--1 {
-    width: 360px;
-    height: 440px;
-  }
-}
-.products__cardframe--2 {
-  margin-left: 18px;
-  margin-top: -18px;
-  z-index: -2;
-}
-@media screen and (min-width: 834px) {
-  .products__cardframe--2 {
-    width: 200px;
-    height: 280px;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .products__cardframe--2 {
-    width: 296px;
-    height: 364px;
-  }
-}
-@media screen and (min-width: 1728px) {
-  .products__cardframe--2 {
-    width: 360px;
-    height: 440px;
-  }
-}
-.products__card-title {
+.card__title {
   position: relative;
-  bottom: 72px;
-  width: 296px;
-  height: 72px;
+  bottom: 84px;
+  width: 360px;
+  height: 84px;
   margin: 0;
-  padding: 24px 21px;
+  padding: 28px 28px;
   background: linear-gradient(93.39deg, rgba(240, 243, 246, 0.7) 0%, rgba(226, 231, 235, 0) 100%);
   box-shadow: inset 0px 1px 1px rgba(21, 16, 15, 0.4);
   -webkit-backdrop-filter: blur(7.5px);
@@ -1156,4 +1125,28 @@ body {
   letter-spacing: 0.15em;
   text-transform: uppercase;
   color: #FFFFFF;
+}
+.card__frame {
+  position: absolute;
+  width: 360px;
+  height: 440px;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 4px rgba(21, 16, 15, 0.5);
+  border-radius: 8px;
+}
+.card__frame--1 {
+  margin-left: 10px;
+  margin-top: -10px;
+  z-index: -1;
+}
+.card__frame--2 {
+  margin-left: 18px;
+  margin-top: -18px;
+  z-index: -2;
+}
+.card__frame--3 {
+  margin-left: 250px;
+}
+.card__frame--4 {
+  margin-left: 350px;
 }/*# sourceMappingURL=main.css.map */
