--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,6 @@
 
 // Products section
 @import 'layouts/products';
-@import 'components/products-card';
+@import 'components/card';
 
 // Footer-section
