--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -32,11 +32,11 @@
     }
 
     &__image {
+        box-shadow: 1px 1px 8px 0px rgba(21, 16, 15, 0.5);
         border-radius: 8px;
-        filter: drop-shadow(1px 1px 8px rgba(21, 16, 15, 0.5));
     }
 
-    &__title--1 {
+    &__title {
         position: relative;
         bottom: 84px;
         width: 360px;
@@ -56,7 +56,7 @@
         color: #FFFFFF;
     }
 
-    &__title--2 {
+    &__title--type2 {
         position: relative;
         bottom: 84px;
         width: 360px;
